Fix Blurry Image on Variant products, Booking message color fix, remove Oliver logging

--- a/bb-theme-child/assets/css/partials/_account.scss
+++ b/bb-theme-child/assets/css/partials/_account.scss
@@ -168,7 +168,7 @@
 		color: #000 !important;
 	}
 
-	.woocommerce-info {
-		color: #000 !important;
-	}
+	// .woocommerce-info {
+	// 	color: #000 !important;
+	// }
 }
